Completed Calculator Frontend Project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
+
+#app {
+  height: 100vh;
+  
+}
+h1{
   text-align: center;
+  margin-top: 75px;
+}
+body {
+  background: rgb(9,9,121);
+background: linear-gradient(90deg, rgba(9,9,121,1) 20%, rgba(0,212,255,1) 50%, rgba(9,9,121,1) 80%);
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calculator {
+  margin:auto;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  border: 2px solid #47476b;
+  padding: 5px;
+  background: black;
+  width: 320px;
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.formulaScreen {
+  min-height: 20px;
+  font-family: digital;
+  font-size: 20px;
+  color: #66ffff;
+  text-align: right;
+  vertical-align: text-top;
+  line-height: 20px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.outputScreen {
+  font-size: 29px;
+  font-family: digital;
   color: white;
+  text-align: right;
+  line-height: 35px;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  position: relative;
+  height: 65px;
+  width: 80px;
+  color: white;
+  outline: 1px solid black;
+  border: none;
+  background: #4d4d4d;
+  font-family: Share Tech Mono, monospace;
+  font-size: 20px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button:hover {
+    color: black;
+    outline: 0.10em solid grey;
+    z-index: 3;
   }
-  to {
-    transform: rotate(360deg);
+
+.jumbo {
+  width: 160px;
+}
+
+.author {
+  text-align: center;
+  font-family: Share Tech Mono, sans;
+  margin-top: 15px;
+  a {
+    text-decoration: none;
+    color: #00264d;
+    line-height: 26px;
   }
 }
+
+
